tests/valid_inputs/arr_plus_int.cpp

int main() {
	int arr[5];
	arr[2] = 42;
	return *(arr+2);
}
