tests/invalid_inputs/sema/assign_into_rvalue.cpp

int main() {
	5 = 1 + 2;
}
